--- a/css/invie.css
+++ b/css/invie.css
@@ -13,6 +13,7 @@ th{background:#273b47;color:white;padding:10px 20px;text-align:left;}
 td{padding:20px;}
 table, td, th{border:1px solid #273b47;border-collapse:collapse;}
 input, textarea{outline:0;}
+textarea{width:200px;}
 input:focus, textarea:focus{background:lightgray;}
 .contenedor{max-width:800px;margin:auto;position:relative;}
 .background{background-image:url('../images/background.png');background-size:cover;--moz-background-size:cover;--webkit-background-size:cover;--o-background-size:cover;}
@@ -47,11 +48,12 @@ input:focus, textarea:focus{background:lightgray;}
 .formulario{display:flex;width:400px;color:white;}
 .col1, .col2{display:flex;flex-direction:column;}
 .col1{margin-right:15px;}
-.col2{align-items:flex-start;}
+.col2{align-items:flex-start;padding-right:10px;}
 .col2 .button{margin-top:15px;}
 .intereses label{font-size:12px;}
 .formulario label, .sexo, .intereses{margin-bottom:10px;}
 .sexo{margin-top:10px;}
+.texto{width:200px;}
 .tabla{margin:50px 0;}
 .header.background{padding:20px;}
 .burguer-button{width:40px;line-height:40px;border-radius:50%;height:40px;display:inline-block;text-align:center;background:#395667;cursor:pointer;position:fixed;left:20px;top:20px;z-index:3;color:white;display:none;}
